# parallel_processing_lab

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cuda_filter/: CMakeLists.txt
cuda_filter/src/: main.cu
cuda_intro/: CMakeLists.txt
cuda_intro/src/: main.cu
cuda_reduction/: CMakeLists.txt
cuda_reduction/src/: main.cu
histograma/: CMakeLists.txt
histograma/src/: main.cpp
matrice_vector/: CMakeLists.txt
matrice_vector/src/: main.cpp
monte_carlo_pi/: CMakeLists.txt
monte_carlo_pi/src/: main.cpp
utilities/: utilities.hpp
