cmake_minimum_required(VERSION 3.5)
set(CMAKE_CXX_STANDARD 14)

add_subdirectory(matrice_vector)
add_subdirectory(histograma)
add_subdirectory(monte_carlo_pi)
find_package(CUDA)
if(CUDA_FOUND)
add_subdirectory(cuda_intro)
add_subdirectory(cuda_filter)
add_subdirectory(cuda_reduction)
endif(CUDA_FOUND)